  * checks/cruft.pm:
    + [NT] Avoid given/when which was demoted to an
      experimental feature.  (Closes: #720835)
  * checks/files.{desc,pm}:
    + [BR] Add check for architecture pkg-config files using
      multi-arch paths but being installed in a non-multi-arch
      location.  Thanks to Ivo De Decker for the report.
      (Closes: #674469)
  * checks/md5sums.{desc,pm}:
    + [JW,NT] Rename a tag due to a typo in the tag name.
      The tag has no known overrides.
  * checks/menus.{desc,pm}:
    + [JW,NT] Rename tags due to a typo in their tag name.
      These tags have no known overrides.
  * checks/source-copyright.pm:
    + [NT] Avoid accidental use of an experimental feature.

  * debian/control:
    + [NT] Add Build-Depends on aspell, aspell-en and
      libtest-spelling-perl.

  * lib/Lintian/Util.pm:
    + [NT] Prefer paths without leading slash in the
      documentation for normalize_pkg_path.  Thanks to
      Kevin Ryde for spotting this inconsistency.
    + [NT] The first argument argument of normalize_pkg_path
      is now unconditionally normalized.  Furthermore, allow
      the function to be called with only one argument like
      Cwd::realpath.

  * t/*:
    + [NT] Adapt several tests to work under perl 5.18.

 -- Niels Thykier <niels@thykier.net>  Wed, 21 Aug 2013 12:58:05 +0200

lintian (2.5.16) unstable; urgency=low

  * Summary of tag changes:
    + Added:
      - changelog-is-dh_make-template
      - copyright-should-refer-to-common-license-file-for-apache-2
      - debian-control-repeats-field-name-in-value
      - info-document-missing-image-file
      - license-problem-font-adobe-copyrighted-fragment
      - license-problem-font-adobe-copyrighted-fragment-no-credit
      - missing-dependency-on-libstdc++
      - quilt-patch-using-template-description
    + Removed:
      - dh_pycentral-is-obsolete
      - dh_python-is-obsolete
      - font-adobe-copyrighted-fragment
      - font-adobe-copyrighted-fragment-no-credit